   than an administrative action happened to power off the load, but the UPS
   device is still alive and communicating (USB, SNMP, etc.); corresponding
   `MONITOR`'ed amount of power sources are considered not being "fed" for
   the power value calculation purposes. The `BYPASS` state is now treated
   similarly to `ONBATT`: currently this UPS "feeds" its load, but if later
   communications fail, it is considered dead. [#2044]

 - Extended Linux systemd support with optional notifications about daemon
   state (READY, RELOADING, STOPPING) and watchdog keep-alive messages [#1590]

 - Extended Linux systemd units with aliases named after the daemons:
   `nut-server.service` as `upsd.service`, and `nut-monitor.service` as
   `upsmon.service` (so simple `systemctl reload upsd` can work) [#1777]

 - Extended driver-server socket protocol with `BROADCAST (num)` keyword,
   and a `NOBROADCAST` as a shortcut for `BROADCAST 0`. This allows clients
   to toggle whether they want to receive `send_to_all()` updates from a
   driver, or only answers to requests they send [#1914]

 - Added support for `make sockdebug` for easier developer access to the tool;
   also if `configure --with-dev` is in effect, it would now be installed to
   the configured `libexec` location. A man page was also added. [#1936]

 - Numerous daemons (`upsd`, `upsmon`, drivers, `upsdrvctl`, `upssched`)
   which accepted `-D` option for debug setting previously, now can also
   honour a `NUT_DEBUG_LEVEL=NUM` environment variable if no `-D` arguments
   were provided. Unlike those arguments, the environment variable does
   not enforce that daemons run in foreground mode by default [#1915]
   * Note that unlike some other NUT daemons, `upssched` with enabled
     debug does not stop reporting on `stderr`! [#1965]

 - A bug in `upssched` was discovered and fixed, where it ran a tight loop
   stressing the CPU; it was presumably introduced between NUT v2.7.4 and
   v2.8.0 releases [#1964, #1965]
