@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3246 utf-8
+personal_ws-1.1 en 3247 utf-8
 AAS
 ABI
 ACFAIL
@@ -818,6 +818,7 @@ OC
 ODH
 OEM
 OEM'ed
+OFFDURATION
 OID
 OIDs
 OLHVT
